--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 
 </head>
-    <title> PROJET MSPR 2023</title>
+    
 <body>
+    <h1> PROJET MSPR 2023</h1>
     <h1>Data Visualisation</h1>
 
     <h2>DC Scatter Plot</h2>
